v0.2.0 -
--------------------
    - Localization support (gettext).
    - Fix broken delay option.
    - Data update time is now set in seconds.
    - New field displays available memory.
    - Long options.
    - Size in powers of 1024 and 1000
    - Size in gigabytes and terabytes

v0.1.0 - 16 Apr 2016
--------------------
    - Use cmake instead of autotools.
    - Code refactoring.
    - Add hotkeys for display the amount of memory in Mb,Kb and bytes.

v0.0.2 - 03 Jun 2015
--------------------
    - Add Buffer and Cached memory info.

v0.0.1 - 19 May 2015
--------------------
    - initial commit