@@ -30,6 +30,9 @@ Display the amount of memory in gigabytes.
 \fB\-t\fR, \fB\-\-tera\fR
 Display the amount of memory in terabytes.
 .TP
+\fB\-h\fR, \fB\-\-human\fR
+Display the amount of memory in human readable format.
+.TP
 \fB\-V\fR, \fB\-\-version\fR
 Prints version.
 .TP
@@ -57,6 +60,9 @@ Display the amount of memory in gigabytes.
 .TP
 .B t
 Display the amount of memory in terabytes.
+.TP
+.B h
+Display the amount of memory in human readable format.
 .TP
 .B p
 Toggle power size (1000 or 1024).
