@@ -7,6 +7,7 @@ v0.2.0 -
     - Long options.
     - Size in powers of 1024 and 1000
     - Size in gigabytes and terabytes
+    - Human readable output of memory size(enable by default)
 
 v0.1.0 - 16 Apr 2016
 --------------------
